--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expect": "^1.20.2",
     "express": "^4.16.3",
+    "mocha": "^3.0.2",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
