--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expect": "^1.20.2",
     "express": "^4.16.3",
     "mocha": "^3.0.2",
+    "moment": "^2.15.1",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
